--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
       body { color: #333; margin: 0; padding: 0; font-family: Montserrat; }
       * { box-sizing: border-box; }
       .flex-wrapper { display: flex; justify-content: center; }
-      .d3-tst { display: flex; flex-direction: column; align-items: center; }
+      div[name=d3-tst] { display: flex; flex-direction: column; align-items: center; }
     </style>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossOrigin="anonymous" />
 
     <script src='https://d3js.org/d3.v5.min.js'></script>
   </head>
   <body>
-    <h1>h1 was not set</h1>
+    <h1>D3 tst</h1>
     <div class='flex-wrapper'>
-      <div class='d3-tst'></div>
+      <div name='d3-tst'></div>
     </div>
 
     <script src='./index.js' type='text/javascript'></script>
